--- a/Exploratory_Data.ipynb
+++ b/Exploratory_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc3a350b",
+   "id": "b0c68300",
    "metadata": {},
    "source": [
     "### Import libraries\n"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418c8923",
+   "id": "59e89f0c",
    "metadata": {},
    "source": [
     "### Read Data\n"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62fcc8e6",
+   "id": "87ae3b89",
    "metadata": {},
    "source": [
     "### Initial Analysis\n",
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e17b75e5",
+   "id": "9c04d166",
    "metadata": {},
    "source": [
     "### Exploratory Phase\n",
@@ -2210,7 +2210,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "48386c64",
+   "id": "048575df",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48689c15",
+   "id": "5e541380",
    "metadata": {},
    "source": [
     "### Transform Phase\n",
@@ -2251,7 +2251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "629c1041",
+   "id": "b73fa2a2",
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4cf7ab2c",
+   "id": "1a4db00b",
    "metadata": {
     "scrolled": true
    },
@@ -3177,7 +3177,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9cc699a3",
+   "id": "7324bce7",
    "metadata": {},
    "outputs": [
     {
@@ -3219,8 +3219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "717fe6d5",
+   "execution_count": 30,
+   "id": "8ea44734",
    "metadata": {},
    "outputs": [
     {
@@ -3235,13 +3235,13 @@
    "source": [
     "# split data into feature/target\n",
     "y = hr_df['Attrition_Yes'].values\n",
-    "X = hr_df.drop(['Attrition_Yes', 'Attrition_No'], 1).values"
+    "X = hr_df.drop(['Attrition_Yes', 'Attrition_No'], 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "2620d355",
+   "execution_count": 31,
+   "id": "06a7fa10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3253,8 +3253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "c3d6e80c",
+   "execution_count": 32,
+   "id": "19734fe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3274,7 +3274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f7c3a3",
+   "id": "79c75da9",
    "metadata": {},
    "source": [
     "\n",
@@ -3284,7 +3284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc07fdd",
+   "id": "f1a6b7cb",
    "metadata": {},
    "source": [
     "\n",
@@ -3295,14 +3295,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6803a570",
+   "id": "216b332b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "45973b7b",
+   "id": "4eab3bee",
    "metadata": {},
    "source": [
     "\n",
@@ -3313,14 +3313,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f21e7413",
+   "id": "76d99d44",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "de33a7ca",
+   "id": "dd9d79a2",
    "metadata": {},
    "source": [
     "\n",
@@ -3332,14 +3332,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea781326",
+   "id": "155c4a4e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "29d6e295",
+   "id": "5e58182f",
    "metadata": {},
    "source": [
     "\n",
@@ -3349,14 +3349,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3406f558",
+   "id": "5e29aa9d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "10fc6e81",
+   "id": "ce080788",
    "metadata": {},
    "source": [
     "\n",
@@ -3368,14 +3368,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab93a0d2",
+   "id": "f98c08e3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7dc97d8c",
+   "id": "88a0d4d1",
    "metadata": {},
    "source": [
     "\n",
@@ -3384,7 +3384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c38927",
+   "id": "5cd8a640",
    "metadata": {},
    "source": [
     "\n",
@@ -3394,38 +3394,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f08ef3f",
+   "execution_count": 34,
+   "id": "e249c5b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BalancedRandomForestClassifier(random_state=1)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Random Forest Model\n",
-    "\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "brf = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
+    "\n",
     "# Fit\n",
-    "brf.fit(X_train, y_train)\n",
-    "# Calculated the balanced accuracy score\n",
-    "y_pred = brf.predict(X_test)\n",
-    "balanced_accuracy_score(y_test, y_pred)\n",
-    "# Display the confusion matrix\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
-    "# Create a DataFrame from the confusion matrix.\n",
-    "cm_df = pd.DataFrame(\n",
-    "    cm, index=[“Actual high_risk”, “Actual low_risk”], columns=[“Predicted high_risk”, “Predicted low_risk”])\n",
-    "cm_df\n",
-    "# Print the imbalanced classification report\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
-    "print(classification_report_imbalanced(y_test, y_pred))\n",
-    "# List the features sorted in descending order by feature importance\n",
-    "features_rank = sorted(zip(brf.feature_importances_, X.columns), reverse=True)\n",
-    "for feature in features_rank:\n",
-    "    print(f”{feature[1]}: ({feature[0]})“)"
+    "brf.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22111013",
+   "id": "82513dfb",
    "metadata": {},
    "source": [
     "\n",
@@ -3435,15 +3430,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58aa2880",
+   "execution_count": 37,
+   "id": "10fb7f8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "        0.0       0.93      0.78      0.62      0.85      0.69      0.49       321\n",
+      "        1.0       0.29      0.62      0.78      0.39      0.69      0.47        47\n",
+      "\n",
+      "avg / total       0.85      0.76      0.64      0.79      0.69      0.49       368\n",
+      "\n",
+      "MonthlyIncome: (0.07415528139785622)\n",
+      "Age: (0.057179254227513784)\n",
+      "YearsAtCompany: (0.054404733448090645)\n",
+      "TotalWorkingYears: (0.047020226232694716)\n",
+      "HourlyRate: (0.04095374932145764)\n",
+      "EmployeeNumber: (0.040561601692269154)\n",
+      "YearsWithCurrManager: (0.04048281089207008)\n",
+      "MonthlyRate: (0.04021285439718601)\n",
+      "DailyRate: (0.040200853147882104)\n",
+      "OverTime_Yes: (0.03491554735325536)\n",
+      "DistanceFromHome: (0.03442070541448051)\n",
+      "PercentSalaryHike: (0.03239182308882963)\n",
+      "YearsInCurrentRole: (0.030866929881305284)\n",
+      "NumCompaniesWorked: (0.030311256220096564)\n",
+      "OverTime_No: (0.02992805545493613)\n",
+      "JobLevel: (0.02927815776486312)\n",
+      "EnvironmentSatisfaction: (0.02749666313965444)\n",
+      "StockOptionLevel: (0.02699310082894835)\n",
+      "TrainingTimesLastYear: (0.022971587609002544)\n",
+      "JobSatisfaction: (0.021871077743026008)\n",
+      "YearsSinceLastPromotion: (0.02071530039684097)\n",
+      "RelationshipSatisfaction: (0.01981810226681405)\n",
+      "WorkLifeBalance: (0.01950335984915848)\n",
+      "JobInvolvement: (0.018675292860946963)\n",
+      "Education: (0.016831611964590282)\n",
+      "MaritalStatus_Single: (0.012957200953367724)\n",
+      "JobRole_Sales Executive: (0.008673572627753513)\n",
+      "Department_Sales: (0.008213137327327204)\n",
+      "BusinessTravel_Travel_Rarely: (0.008130596379141188)\n",
+      "MaritalStatus_Married: (0.007720156500445235)\n",
+      "MaritalStatus_Divorced: (0.007386843513017031)\n",
+      "Gender_Male: (0.007270872140093192)\n",
+      "EducationField_Medical: (0.007234912746359612)\n",
+      "EducationField_Life Sciences: (0.006759682905126499)\n",
+      "JobRole_Research Scientist: (0.006568364275231169)\n",
+      "BusinessTravel_Travel_Frequently: (0.006465351354334789)\n",
+      "Department_Research & Development: (0.006454293905458436)\n",
+      "JobRole_Laboratory Technician: (0.006394098212265054)\n",
+      "EducationField_Technical Degree: (0.005807476913368297)\n",
+      "JobRole_Sales Representative: (0.005777646697921053)\n",
+      "BusinessTravel_Non-Travel: (0.005610518662563909)\n",
+      "Gender_Female: (0.005481586470911576)\n",
+      "JobRole_Manufacturing Director: (0.004557389192434639)\n",
+      "PerformanceRating: (0.004027868852131596)\n",
+      "JobRole_Healthcare Representative: (0.003598367186672886)\n",
+      "EducationField_Other: (0.0032584693812947488)\n",
+      "EducationField_Marketing: (0.0026011715061043904)\n",
+      "JobRole_Manager: (0.0023759977382677502)\n",
+      "JobRole_Research Director: (0.0016069471539506737)\n",
+      "Department_Human Resources: (0.0013551496312654407)\n",
+      "EducationField_Human Resources: (0.0012639159763122446)\n",
+      "JobRole_Human Resources: (0.00028847520311128555)\n",
+      "StandardHours: (0.0)\n",
+      "Over18_Y: (0.0)\n",
+      "EmployeeCount: (0.0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted_high_risk</th>\n",
+       "      <th>Predicted_low_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_high_risk</th>\n",
+       "      <td>250</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_low_risk</th>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Predicted_high_risk  Predicted_low_risk\n",
+       "Actual_high_risk                  250                  71\n",
+       "Actual_low_risk                    18                  29"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Calculated the balanced accuracy score\n",
+    "y_pred = brf.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm\n",
+    "    , index=['Actual_high_risk', 'Actual_low_risk'], columns=['Predicted_high_risk', 'Predicted_low_risk']\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Print the imbalanced classification report\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))\n",
+    "\n",
+    "# List the features sorted in descending order by feature importance\n",
+    "features_rank = sorted(zip(brf.feature_importances_, X.columns), reverse=True)\n",
+    "for feature in features_rank:\n",
+    "    print(f'{feature[1]}: ({feature[0]})')\n",
+    "    \n",
+    "cm_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "00f6155a",
+   "id": "899153c2",
    "metadata": {},
    "source": [
     "\n",
@@ -3455,14 +3598,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a2430e",
+   "id": "4a44cb36",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cff89155",
+   "id": "d2dda44b",
    "metadata": {},
    "source": [
     "\n",
@@ -3472,14 +3615,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b6f9d6",
+   "id": "358c3f62",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fb2431b8",
+   "id": "c377c42d",
    "metadata": {},
    "source": [
     "\n",
@@ -3491,14 +3634,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb6124b",
+   "id": "de34250b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "28610253",
+   "id": "65fbc72d",
    "metadata": {},
    "source": [
     "\n",
@@ -3507,7 +3650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74e12ef",
+   "id": "bd152847",
    "metadata": {},
    "source": [
     "\n",
@@ -3518,14 +3661,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd70524",
+   "id": "b499d720",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2b60be95",
+   "id": "9862bd99",
    "metadata": {},
    "source": [
     "\n",
@@ -3536,14 +3679,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fa281e",
+   "id": "66b0099f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fc4f3fd4",
+   "id": "0785fcde",
    "metadata": {},
    "source": [
     "\n",
@@ -3555,14 +3698,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4057560",
+   "id": "a9cddab6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3c165b68",
+   "id": "525a10af",
    "metadata": {},
    "source": [
     "\n",
@@ -3572,14 +3715,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4621eb4a",
+   "id": "f840bf22",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d2301268",
+   "id": "21bb1e5f",
    "metadata": {},
    "source": [
     "\n",
@@ -3591,14 +3734,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44361eda",
+   "id": "654bbfd8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5f5d97cf",
+   "id": "bddd2049",
    "metadata": {},
    "source": [
     "\n",
@@ -3607,7 +3750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb286253",
+   "id": "6f4a73ad",
    "metadata": {},
    "source": [
     "\n",
@@ -3618,14 +3761,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b7df4e",
+   "id": "d0529b30",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "32387cbc",
+   "id": "6f1c8235",
    "metadata": {},
    "source": [
     "\n",
@@ -3636,14 +3779,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9921881c",
+   "id": "fe55b0b7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d12fa740",
+   "id": "ed298cad",
    "metadata": {},
    "source": [
     "\n",
@@ -3655,14 +3798,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0981e72e",
+   "id": "6f6cf281",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4d91dff7",
+   "id": "eff86df2",
    "metadata": {},
    "source": [
     "\n",
@@ -3672,14 +3815,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678c6426",
+   "id": "62f7facf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2b1032e0",
+   "id": "52d60620",
    "metadata": {},
    "source": [
     "\n",
@@ -3691,14 +3834,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113be2c7",
+   "id": "1277e9e9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fd2beaef",
+   "id": "430afd8e",
    "metadata": {},
    "source": [
     "\n",
@@ -3707,7 +3850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362c0b00",
+   "id": "e2660ecc",
    "metadata": {},
    "source": [
     "\n",
@@ -3718,14 +3861,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cf93d88",
+   "id": "c332e294",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ca5804dc",
+   "id": "b680c008",
    "metadata": {},
    "source": [
     "\n",
@@ -3736,14 +3879,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62e4393",
+   "id": "2bac9744",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6a53a48a",
+   "id": "8ba263ac",
    "metadata": {},
    "source": [
     "\n",
@@ -3755,14 +3898,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e49f5c",
+   "id": "518a0fa5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8eb1286c",
+   "id": "63484c19",
    "metadata": {},
    "source": [
     "\n",
@@ -3772,14 +3915,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab17a5cb",
+   "id": "c0f26d84",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4a759148",
+   "id": "4c88514d",
    "metadata": {},
    "source": [
     "\n",
@@ -3790,7 +3933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131edfc7",
+   "id": "4f85c5de",
    "metadata": {},
    "source": [
     "\n",
