--- a/Exploratory_Data.ipynb
+++ b/Exploratory_Data.ipynb
@@ -2118,7 +2118,37 @@
    "id": "8381d54e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Code outline for Random Forest ML model that we are planning to utilize in our project\n",
+    "\n",
+    "# Resample the training data with the BalancedRandomForestClassifier\n",
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "brf = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
+    "\n",
+    "# Fit\n",
+    "brf.fit(X_train, y_train)\n",
+    "\n",
+    "# Calculated the balanced accuracy score\n",
+    "y_pred = brf.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "# Display the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[“Actual high_risk”, “Actual low_risk”], columns=[“Predicted high_risk”, “Predicted low_risk”])\n",
+    "cm_df\n",
+    "\n",
+    "# Print the imbalanced classification report\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))\n",
+    "\n",
+    "# List the features sorted in descending order by feature importance\n",
+    "features_rank = sorted(zip(brf.feature_importances_, X.columns), reverse=True)\n",
+    "for feature in features_rank:\n",
+    "    print(f”{feature[1]}: ({feature[0]})“)"
+   ]
   }
  ],
  "metadata": {
