Added single observation check
Added single observation check to Python code.

--- a/RonH/Exploratory_Data.ipynb
+++ b/RonH/Exploratory_Data.ipynb
@@ -23,7 +23,11 @@
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "# Postgres DB connector\n",
+    "import psycopg2\n",
+    "# Password for Postgres DB\n",
+    "from config import postpw"
    ]
   },
   {
@@ -32,6 +36,27 @@
    "metadata": {},
    "source": [
     "### Read Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bccaf814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(postpw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0381f38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connection String for the Postgress database - Replace yourPW with the password you used when you installed Postgres\n",
+    "conn = psycopg2.connect(\"host='{}' port={} dbname='{}' user={} password={}\".format('127.0.0.1', 5432, 'Group6Final', 'postgres', postpw))"
    ]
   },
   {
@@ -4090,7 +4115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
